--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,11 @@
     background: var(--fc-yellow);
 }
 
+.py-14 {
+    padding-top: 14px;
+    padding-bottom: 14px;
+}
+
 .bg-color {
     background: var(--fc-yellow);
 
@@ -77,7 +82,7 @@
 }
 
 .padding-top {
-    padding-top: 52px;
+    padding-top: 80px;
 }
 
 .welcome {
@@ -155,6 +160,7 @@
 .img {
     position: relative;
     z-index: 1;
+    max-width: 806px;
 }
 
 .absolute1 {
@@ -212,6 +218,7 @@
     right: 32%;
     z-index: 0;
 }
+
 
 /* -------------------------------------timeline--------------------------- */
 
@@ -560,12 +567,11 @@
     background-color: var(--fc-light-yellow) !important;
     color: var(--fc-black) !important;
     font-family: 'Poppins', sans-serif;
-    font-size: var(--fs-mmd);
+    font-size: var(--fs-mmd) !important;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    border: none;
-    background-color: inherit;
+
 }
 
 .accordion-item {
@@ -722,6 +728,7 @@
     }
 
 
+
 }
 
 @media(min-width:768px) {
@@ -749,6 +756,11 @@
     .container-3::after {
         /* right: -16px; */
         left: 97.5%;
+
+    }
+
+    .container-2::after {
+        left: -15px;
 
     }
 }
